assets/css/beautifuljekyll.css
/* ... */
.blog-post blockquote p:last-child {
  margin-bottom: 0;
}

.center {
  display: block;
  margin: 0 auto;
}

/* Search bar */
#beautifuljekyll-search-overlay {
  font-family: var(--header-font);
  display: none;
  z-index: 999999;
  position: fixed;
  background: rgba(0,0,0,0.9);
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  text-align: center;
  padding: 1rem;
}

#nav-search-exit {
  position: absolute;
  top: 1.5rem;
  cursor: pointer;
  right: 25%;
  margin-right: 2rem;
  color: #555;
  font-size: 2rem;
  line-height: 2rem;
  font-weight: bold;
}
#nav-search-exit:hover {
  color: #000;
}
#nav-search-input {
  text-align: center;
  background: #e7edee;
  margin: auto;
  display: block;
  font-size: 2rem;
  width: 50%;
  transition: width 300ms ease;
  color: #222;
  border-radius: 5rem;
  outline: none;
  border: none;
  padding: 0 3rem;
}

@media (max-width: 1199px) {
  #nav-search-input {
    width: 75%;
  }
  #nav-search-exit {
    right: 12.5%;
  }
}
@media (max-width: 767px) {
  #nav-search-input {
    width: 100%;
  }
  #nav-search-exit {
    right: 0;
  }
}
#nav-search-input:focus {
  background: #f3f8fe;
  box-shadow: 0px 0.15rem 1rem #e7f4ff;
  outline: none;
}

#nav-search-input::placeholder {
  color: #777;
}

#search-results-container {
  list-style: none;
  padding-left: unset;
  margin-top: 1.5rem;
  color: #fff;
  font-size: 1.5rem;
  max-height: calc(100vh - 6.5rem);
  overflow-y: auto;
}
#search-results-container a {
  color: #fff;
  text-decoration: none;
}
#search-results-container a:hover {
  color: #fff;
  text-decoration: underline;
}

#nav-search-icon {
  display: inline-block;
}
#nav-search-text {
  display: none;
}

@media (max-width: 1199px) {
  #nav-search-icon {
    display: none;
  }
  #nav-search-text {
    display: inline-block;
  }
}

/* --- Card Section --- */

.card-section {
  align-items: center;
}

.card {
  margin-top: 1.5rem;
  display: flex;
  align-items: center;
  background: none;
  border-top: none !important;
  border-left: none !important;
  border-right: none !important;
  border-bottom: none !important;
  box-shadow: none;
  transition: transform 0.2s ease-in-out;
}

.card.card-horizontal {
  border-bottom: 1px solid #ddd !important;
  padding-bottom: 0.5rem;
}

.card-horizontal {
  flex-direction: row;
  align-items: top;
  align-items: flex-start;
  justify-content: flex-start;
}

.card-logo {
  flex-shrink: 0;
  width: 80px;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 1rem;
}

.card-logo img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.card-content {
  flex: 1;
  color: var(--text-col);
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.card-content p {
  margin: 0;
  white-space: normal;
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: pre-line;
}

.card-center-content {
  flex: 1;
  color: var(--text-col);
  /* line-height: 1.6; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  width: 100%;
  box-sizing: border-box;
}

.card-content p:last-child {
  margin-bottom: 0;
}

@media (max-width: 768px) {
  .card {
    width: 100%;
  }

  .card-horizontal {
    flex-direction: row;
  }

  .card-logo {
    width: 50px;
    height: 50px;
    margin: 0 0.75rem;
  }

  .card-content {
    min-height: auto;
    padding: 0;
    text-align: left;
  }
}

.card-title {
  font-family: var(--header-font);
  font-size: 1.25rem;
  font-weight: 800;
  color: var(--text-col);
  text-align: left;
  flex-direction: column;
  display: flex;
}

